--- a/quizzapp-frontend/src/app/login/login.component.css
+++ b/quizzapp-frontend/src/app/login/login.component.css
@@ -1,3 +1,16 @@
+
+.main-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('/assets/images/backgroundpic.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+
 .login-container{
     background-color: #1354b2;
     width: 300px;
@@ -10,12 +23,10 @@
 
 img{
     position: absolute;
-    width: 150px;
-    height: 150px;
-    border-radius: 75px;
-    top: 10%;
-    left: 50%;
-    margin-left: -75px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+
 }
 
 /* Here is the Form */
