changed login, added hompagecomponent

--- a/quizzapp-frontend/src/app/app.component.html
+++ b/quizzapp-frontend/src/app/app.component.html
@@ -9,12 +9,6 @@
 
 
 
-<div class="main-container"> 
-    
-    <app-login></app-login>
-</div>
-
-
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
@@ -26,4 +20,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+<router-outlet></router-outlet>
