Quiz-Round interface added

--- a/quizzapp-frontend/src/app/app.component.html
+++ b/quizzapp-frontend/src/app/app.component.html
@@ -9,9 +9,9 @@
 
 
 
-<div class="main-container"> 
-    
-    <app-login></app-login>
+<div class="main-container">
+
+    <app-quiz-round></app-quiz-round>
 </div>
 
 
