--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<img src="assets/images/quizzAppLogo.jpeg" />
+<!--<img src="assets/images/quizzAppLogo.jpeg" />
 <div class="login-container">
 
     <form class="example-form">
@@ -6,7 +6,7 @@
             <mat-label>Username/E-mail</mat-label>
             <input matInput placeholder="Ex. Dr. med. Rasen" value="">
         </mat-form-field>
-    
+
         <mat-form-field class="example-full-width">
             <mat-label>Password</mat-label>
             <input matInput placeholder="Ex. password123" value="">
@@ -16,3 +16,5 @@
     </form>
 
 </div>
+-->
+<div></div>
