added the navbar for the homepage

--- a/quizzapp-frontend/src/app/homepage/homepage.component.html
+++ b/quizzapp-frontend/src/app/homepage/homepage.component.html
@@ -1,1 +1,9 @@
-<p>homepage works!</p>
+<mat-toolbar color="primary" class="mat-elevation-z8">
+  <img src="assets/images/quizzAppLogo.jpeg" /> QuizzApp
+
+  <div class="spacer"></div>
+
+  <a mat-button routerLink="homepage">Home</a>
+  <a mat-button>XYZ</a>
+  <a class="settings-button" mat-raised-button>Settings</a>
+</mat-toolbar>
