--- a/quizzapp-frontend/src/app/homepage/homepage.component.html
+++ b/quizzapp-frontend/src/app/homepage/homepage.component.html
@@ -3,7 +3,10 @@
 
   <div class="spacer"></div>
 
-  <a mat-button routerLink="homepage">Home</a>
+  <a mat-button routerLink="overview">Game-Overview</a>
   <a mat-button>XYZ</a>
   <a class="settings-button" mat-raised-button>Settings</a>
 </mat-toolbar>
+
+
+<router-outlet></router-outlet>
