--- a/quizzapp-frontend/src/app/homepage/homepage.component.html
+++ b/quizzapp-frontend/src/app/homepage/homepage.component.html
@@ -4,7 +4,7 @@
   <div class="spacer"></div>
 
   <a mat-button routerLink="/homepage/overview">Game-Overview</a>
-  <a mat-button routerLink="/homepage">Home</a>
+  <a mat-button routerLink="/homepage/quizround">QuizRound</a>
   <a class="settings-button" mat-raised-button>Settings</a>
 </mat-toolbar>
 
