Basic 30 sec timer added

--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
@@ -10,8 +10,7 @@
     <button class="button">Not quite sure if nr.3 is correct</button>
     <button class="button">Maybe answer nr.4 is the right one after all</button>
   </div>
-  <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
+  <mat-progress-bar mode="determinate" [value]="progressbarValue"></mat-progress-bar>
 </div>
-<mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
 
 
