--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
@@ -1,16 +1,18 @@
 <header class="header">
-  <h1>Very important question to ask?</h1>
+  <h1>{{ question.question }}</h1>
 </header>
-<div class="answers">
-  <div class="answerbox">
-    <button class="button">I think this is the correct answer nr.1</button>
-    <button class="button">Could also be answer nr.2 though</button>
-  </div>
-  <div class="answerbox">
-    <button class="button">Not quite sure if nr.3 is correct</button>
-    <button class="button">Maybe answer nr.4 is the right one after all</button>
-  </div>
-  <mat-progress-bar mode="determinate" [value]="progressbarValue"></mat-progress-bar>
-</div>
+
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile
+    *ngFor="let a of shuffledAnswers"
+    (click)="clicked(a)"
+    [ngClass]="{'correct' : answered && a === question.correct_answer,
+    'incorrect' : answered && a !== question.correct_answer}"
+    class="answerbox">
+  {{ a }}
+  </mat-grid-tile>
+</mat-grid-list>
+
+<mat-progress-bar mode="determinate" id="timer" [value]="progressbarValue"></mat-progress-bar>
 
 
