--- a/quizzapp-frontend/src/app/game-overview/game-overview.component.html
+++ b/quizzapp-frontend/src/app/game-overview/game-overview.component.html
@@ -10,4 +10,18 @@
             <p>Points: $PLAYER2_POINTS$</p>
         </div>
     </div>
+    <h3>CATEGORY</h3>
+    <app-single-round></app-single-round>
+    <app-single-round></app-single-round>
+    <app-single-round></app-single-round>
+    <app-single-round></app-single-round>
+    <app-single-round></app-single-round>
+    <app-single-round></app-single-round>   
+    
+    <div id="try">
+
+    </div>
+
+    <button style="color:green" (click)="winClick()">Win a Game</button>
+    <button style="color:red" (click)="loseClick()">Lose a Game</button>
 </div>
