--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.css
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.css
@@ -12,36 +12,34 @@ body {
   border-bottom: 4px solid deeppink;
 }
 
-.answers {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 20px 10px;
+.grid {
+  margin-left: 12%;
+  margin-right: 12%;
+  background-color: midnightblue;
+  height: auto;
 }
 
 .answerbox {
-  border: 5px solid deeppink;
-  margin: 20px;
-  padding: 10px;
+  width: 80%;
+  height: 50%;
+  max-width: 600px;
+  max-height: 350px;
+  border: 6px solid deeppink;
   text-align: center;
-  font-size: 18px;
+  font-size: 22px;
+  padding-top: 18%;
   color: white;
   background-color: #1354b2;
-  border-radius: 10px;
+  border-radius: 12px;
   cursor: pointer;
 }
 
-.button:hover {
+.answerbox:hover {
   background-color: white;
   color: #1354b2;
 }
 
-.button:active {
+.answerbox:active {
   background-color: hotpink;
   color: #1354b2;
 }
