--- a/quizzapp-frontend/src/app/game-overview/game-overview.component.css
+++ b/quizzapp-frontend/src/app/game-overview/game-overview.component.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction:column;
     align-items:center;
-    height: 100vh;
     background-color: #f5f5f5;
+    height: 100vh;
 }
 
 .player-container{
@@ -13,6 +13,28 @@
     margin: 10px;
 }
 
+.grid-container{
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+.player-one-container{
+    display: inline-block;
+}
+
+.category-container{
+    width: 200px;
+    font-size: 15px;
+    display: inline-block;
+    text-align: center;
+}
+
+.player-two-container{
+    display: inline-block;
+}
+
 mat-grid-tile {
     background: lightblue;
-  }
+}
+
