--- a/quizzapp-frontend/src/app/game-overview/game-overview.component.html
+++ b/quizzapp-frontend/src/app/game-overview/game-overview.component.html
@@ -10,11 +10,29 @@
             <p>Points: $PLAYER2_POINTS$</p>
         </div>
     </div>
-    <mat-grid-list cols="2" rowHeight="2:1">
-        <mat-grid-tile>1</mat-grid-tile>
-        <mat-grid-tile>2</mat-grid-tile>
-        <mat-grid-tile>3</mat-grid-tile>
-        <mat-grid-tile>4</mat-grid-tile>
-    </mat-grid-list>
-      
+
+    <div class="anzeige-container">
+        <div class="player-one-container">
+            <button mat-fab extended class="button-1">
+            </button>
+            <button mat-fab extended class="button-2">
+            </button>
+            <button mat-fab extended class="button-3">
+            </button>
+        </div>
+        <div class="category-container">Category 1-6</div>
+        <div class="player-two-container">
+            <button mat-fab extended class="button-4">
+            </button>
+            <button mat-fab extended class="button-5">
+            </button>
+            <button mat-fab extended class="button-6">
+            </button>
+        </div>
+    </div>
+
+    <div class="button-container">
+        <button style="color:green" (click)="winClick()">WIN a game</button>
+        <button style="color: red">lose a game</button>
+    </div>
 </div>
