--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.css
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.css
@@ -1,8 +1,3 @@
-body {
-  margin: 200px auto;
-  background: midnightblue;
-}
-
 .header {
   text-align: center;
   text-transform: uppercase;
@@ -13,21 +8,24 @@ body {
 }
 
 .grid {
-  margin-left: 12%;
-  margin-right: 12%;
+  margin-left: 15%;
+  margin-right: 15%;
   background-color: midnightblue;
   height: auto;
+  border-left: 6px solid deeppink;
+  border-right: 6px solid deeppink;
+  border-top: 6px solid deeppink;
 }
 
 .answerbox {
-  width: 80%;
-  height: 50%;
+  width: 66%;
+  height: 33%;
   max-width: 600px;
   max-height: 350px;
   border: 6px solid deeppink;
   text-align: center;
   font-size: 22px;
-  padding-top: 18%;
+  padding-top: 13%;
   color: white;
   background-color: #1354b2;
   border-radius: 12px;
@@ -50,5 +48,22 @@ body {
 
 .incorrect {
   background-color: red;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 5%;
+
+}
+
+button {
+  margin-top: 15px;
+  background-color: deeppink;
+  color: #ffffff;
+  font-size: 25px;
+  border-radius: 6px;
+  padding: 20px;
 }
 
