--- a/quizzapp-frontend/src/app/homepage/homepage.component.html
+++ b/quizzapp-frontend/src/app/homepage/homepage.component.html
@@ -5,7 +5,8 @@
 
   <a mat-button routerLink="/homepage/overview">Game-Overview</a>
   <a mat-button routerLink="/homepage/quizround">QuizRound</a>
-  <a class="settings-button" mat-raised-button>Settings</a>
+  <a mat-button routerLink="/homepage/opengames">Open-Games</a>
+  <a mat-raised-button routerLink="/">Log out</a>
 </mat-toolbar>
 
 
