--- a/quizzapp-frontend/src/app/game-overview/game-overview.component.css
+++ b/quizzapp-frontend/src/app/game-overview/game-overview.component.css
@@ -34,7 +34,13 @@
     display: inline-block;
 }
 
-mat-grid-tile {
-    background: lightblue;
+.correct{
+    background-color: green;
 }
+
+.incorrect{
+    background-color: red;
+}
+
+
 
