--- a/quizzapp-frontend/src/app/game-overview/game-overview.component.html
+++ b/quizzapp-frontend/src/app/game-overview/game-overview.component.html
@@ -1,13 +1,14 @@
 <div class="main-container">
+  @if (quiz$ | async; as quiz) {
     <h1>Quizz-game overview</h1>
     <div class="player-point-container">
         <div class="player-container">
             <h2>Player 1</h2>
-            <p [(ngModel)]="quiz.player1Points">Points: </p>
+            <p>Points: {{quiz.player1Points}}</p>
         </div>
         <div class="player-container">
             <h2>Player 2</h2>
-            <p>Points: $PLAYER2_POINTS$</p>
+            <p>Points: {{quiz.player2Points}}</p>
         </div>
     </div>
 
@@ -21,5 +22,6 @@
         <button style="color:green" (click)="winClick()">WIN a game</button>
         <button style="color: red"(click)="loseClick()">lose a game</button>
     </div>
+  }
 
 </div>
