--- a/quizzapp-frontend/src/app/login/login.component.css
+++ b/quizzapp-frontend/src/app/login/login.component.css
@@ -1,21 +1,21 @@
 .main-container {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
   background-color: rgb(71, 166, 255);
 }
 
-
-.login-container {
+form {
   background-color: #1354b2;
   width: 300px;
   height: 300px;
   border-radius: 5px;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -26,15 +26,7 @@ img {
   border-radius: 100px;
 }
 
-
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
-
 /* Here are the Buttons */
-
 .btn-signin {
   width: 75%;
   margin-bottom: 10px;
