--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -1,22 +1,19 @@
 <div class="main-container">
     <img src="assets/images/quizzAppLogo.jpeg" />
-    <div class="login-container">
       <form [formGroup]="playerForm" (ngSubmit)="submitClicked()">
         <mat-form-field>
-            <mat-label>Username/E-mail</mat-label>
-            <input type="text" formControlName="email" matInput placeholder="Ex. Dr. med. Rasen" value="" />
-
+            <mat-label>E-mail</mat-label>
+            <input type="text" formControlName="email" matInput placeholder="Dr.med.Rasen@gmx.de" value="" />
         </mat-form-field>
 
         <mat-form-field >
             <mat-label>Password</mat-label>
-            <input type="text" formControlName="password" matInput placeholder="Ex. password123" value="" />
+            <input type="text" formControlName="password" matInput placeholder="password123" value="" />
         </mat-form-field>
 
-        <button mat-flat-button color="primary" class="btn-signin" (click)="signUpClicked()" type="button">Sign Up</button>
+        <button mat-flat-button color="primary" class="btn-signin" type="button" (click)="signUpClicked()">Sign Up</button>
         <button mat-flat-button color="primary" class="btn-signin" type="submit">Submit</button>
       </form>
-    </div>
 
     <div class="errormessage-container" *ngIf="showErrorMessage">
         <p class="errormessage">The given credentials dont match, please try again!</p>
