updated some css stuff from the login page

--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="page-container">
     <img src="assets/images/quizzAppLogo.jpeg" />
       <form [formGroup]="playerForm" (ngSubmit)="submitClicked()">
         <mat-form-field>
