--- a/quizzapp-frontend/src/app/login/login.component.css
+++ b/quizzapp-frontend/src/app/login/login.component.css
@@ -1,6 +1,5 @@
-.main-container {
+.page-container {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
