completed the sign up page

--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <img src="assets/images/quizzAppLogo.jpeg" />
   <form [formGroup]="playerForm" (ngSubmit)="submitClicked()">
     <mat-form-field>
-      <mat-label>E-mail</mat-label>
+      <mat-label>E-Mail</mat-label>
         <input type="text" formControlName="email" matInput placeholder="Dr.med.Rasen@gmx.de"/>
     </mat-form-field>
 
