--- a/quizzapp-frontend/src/app/sign-up/sign-up.component.css
+++ b/quizzapp-frontend/src/app/sign-up/sign-up.component.css
@@ -1,4 +1,4 @@
-.main-container {
+.page-container {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -6,16 +6,15 @@
   background-color: rgb(71, 166, 255);
 }
 
-
-.signup-container {
+form {
   background-color: #1354b2;
   width: 300px;
   height: 300px;
   border-radius: 5px;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
 
 img {
