--- a/quizzapp-frontend/src/app/sign-up/sign-up.component.html
+++ b/quizzapp-frontend/src/app/sign-up/sign-up.component.html
@@ -1,23 +1,20 @@
-<div class="main-container">
+<div class="page-container">
   <img src="assets/images/quizzAppLogo.jpeg" />
-  <div class="sign-container">
-    <mat-form-field hintLabel="Max 10 characters">
-        <mat-label>Username</mat-label>
-        <!--<input (keydown.enter)="createAccClicked()" [(ngModel)]="activePlayer.username" matInput placeholder="Ex. Dr. med. Rasen" value="">-->
+  <form [formGroup]="playerForm">
+    <mat-form-field>
+      <mat-label>E-Mail</mat-label>
+        <input (keydown.enter)="createAccClicked()" formControlName="email" matInput placeholder="Dr.med.Rasen@gmx.de">
     </mat-form-field>
 
-    <mat-form-field hintLabel="Max 10 characters">
-        <mat-label>E-Mail</mat-label>
-       <!-- <input (keydown.enter)="createAccClicked()" [(ngModel)]="activePlayer.email" matInput placeholder="Ex. Dr. med. Rasen@intheKindergarden.com" value="">-->
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+        <input (keydown.enter)="createAccClicked()" formControlName="password" matInput placeholder="password123">
     </mat-form-field>
 
-    <mat-form-field hintLabel="Max 10 characters">
-        <mat-label>Password</mat-label>
-        <!--<input (keydown.enter)="createAccClicked()" [(ngModel)]="activePlayer.password" matInput placeholder="Ex. password123" value="">-->
-    </mat-form-field>
+    <button mat-flat-button color="primary" class="btn-createAcc" (click)="cancelClicked()">Cancel</button>
+    <button mat-flat-button color="primary" class="btn-createAcc" [disabled]="!playerForm.valid">Create Account</button>
+  </form>
 
-    <button mat-flat-button color="primary" class="btn-createAcc" (click)="createAccClicked()">Create Account</button>
-  </div>
   <div class="errormessage-container" *ngIf="showErrorMessage">
     <p class="errormessage">The given credentials dont match, please try again!</p>
   </div>
