added some stuff

--- a/quizzapp-frontend/src/app/sign-up/sign-up.component.html
+++ b/quizzapp-frontend/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,6 @@
 <div class="page-container">
   <img src="assets/images/quizzAppLogo.jpeg" />
+  <h2>Sign Up</h2>
   <form [formGroup]="playerForm">
     <mat-form-field>
       <mat-label>E-Mail</mat-label>
