--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="page-container">
   <img src="assets/images/quizzAppLogo.jpeg" />
+  <h2>Login</h2>
   <form [formGroup]="playerForm" (ngSubmit)="submitClicked()">
     <mat-form-field>
       <mat-label>E-Mail</mat-label>
