added some stuff

--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 
     <mat-form-field >
       <mat-label>Password</mat-label>
-        <input type="text" formControlName="password" matInput placeholder="password123"/>
+        <input type="text" formControlName="password" matInput placeholder="Password123"/>
     </mat-form-field>
 
     <button mat-flat-button color="primary" class="btn-signin" type="button" (click)="signUpClicked()">Sign Up</button>
