--- a/quizzapp-frontend/src/app/sign-up/sign-up.component.html
+++ b/quizzapp-frontend/src/app/sign-up/sign-up.component.html
@@ -9,7 +9,7 @@
 
     <mat-form-field>
       <mat-label>Password</mat-label>
-        <input (keydown.enter)="createAccClicked()" formControlName="password" matInput placeholder="password123">
+        <input (keydown.enter)="createAccClicked()" formControlName="password" matInput placeholder="Password123">
     </mat-form-field>
 
     <button mat-flat-button color="primary" class="btn-createAcc" (click)="cancelClicked()">Cancel</button>
